--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ processResources {
 }
 
 group = 'com.frogfront'
-version = '0.0.1'
+version = applicationVersion
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -42,7 +42,7 @@ publishing {
             from components.java
             groupId 'com.frogfront'
             artifactId 'web-crawler'
-            version '0.0.1'
+            version applicationVersion
         }
     }
 }
@@ -51,7 +51,7 @@ dependencies {
     compile(
     	[group: 'com.google.guava', name: 'guava', version: '24.0-jre'],
     	[group: 'com.github.crawler-commons', name: 'crawler-commons', version: '1.0'],
-    	[group: 'org.jsoup', name: 'jsoup', version: '1.13.1']
+    	[group: 'org.jsoup', name: 'jsoup', version: jsoupVersion]
     	)
 
     testCompile(
