--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,11 @@ cache:
   
 script: 
   - ./gradlew
+  
+deploy:
+  provider: script 
+  script: "./gradlew bintrayUpload"
+  skip_cleanup: true
+  on:
+    tags: true
+    
