adding artifact to frog-front

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ bintray {
 	user = System.getenv('BINTRAY_USER')
     key = System.getenv('BINTRAY_KEY')
     publications = ['WebCrawlerPub']
+    override = false
     pkg {
         repo = 'com.frogfront'
         name = 'web-crawler'
+        userOrg = 'frog-front'
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/Frog-Front/web-crawler'
     }
