--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
 applicationVersion=0.1.1
 jsoupVersion=1.13.1
-website=https://github.com/Frog-Front/web-crawler
+website=http://frogfront.com
+scmWebsite=https://github.com/Frog-Front/web-crawler
+
+signing.keyId=9E793353
+signing.password=
+signing.secretKeyRingFile=secring.gpg
