--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,13 @@ cache:
   
 script: 
   - ./gradlew
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_6afd0fc9428e_key -iv $encrypted_6afd0fc9428e_iv -in .travis/secring.gpg.enc -out secring.gpg -d
   
 deploy:
   provider: script 
-  script: "./gradlew bintrayUpload"
+  script: bash .travis/deploy.sh
   skip_cleanup: true
   on:
     tags: true
