only signing when gpg file exists

--- a/build.gradle
+++ b/build.gradle
@@ -75,8 +75,10 @@ bintray {
     }
 }
 
-signing {
-    sign configurations.archives
+if (new File(project.getProperty('signing.secretKeyRingFile')).exists()) {
+	signing {
+	    sign configurations.archives
+	}
 }
 
 publishing {
