--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ website=http://frogfront.com
 scmWebsite=https://github.com/Frog-Front/web-crawler
 
 signing.keyId=9E793353
+signing.password=
 signing.secretKeyRingFile=secring.gpg
