--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 
 deploy:
   provider: script 
-  script: bash .travis/deploy.sh
+  script: bash .travis/publish.sh
   skip_cleanup: true
   on:
     tags: true
